# dot.me

./: .bashrc  .emacs  .gitignore  .latexmkrc  .stowrc  Cask  README.md  README.org  dotemacs.el  dotemacs.org  rlwrap_sbcl.sh  sbcl_completions.lisp
alacritty/: README.org
alacritty/.config/alacritty/: alacritty.yml
bash/: .bashrc
compton/.config/: compton.conf
darkman/: README.org
dunst/.config/dunst/: dunstrc
emacs/: .emacs  .stow-local-ignore  dotemacs.el  dotemacs.elc  dotemacs.org
firefox/: README.org  user-overrides.js
flashfocus/.config/flashfocus/: flashfocus.yml
fontconfig/.config/fontconfig/: fonts.conf
foot/.config/foot/: foot.ini
gammastep/.config/gammastep/: config.ini
guix-home/: .bash_profile  .bashrc  .zprofile  .zshrc  home-configuration.scm  notes.org
guix/.config/fontconfig/: fonts.conf
guix/.config/guix/: amd-suspend.patch  channels.scm  config.scm  cuirass.genenetwork.org.pub  mirror.brielmaier.net.pub
guix/.config/shepherd/: init.scm
hyprland/.config/hypr/: hypridle.conf  hyprland.conf
i3/.config/i3/: config
i3/.config/i3blocks/: config
libinput-gestures/.config/: libinput-gestures.conf
librewolf/: README.org
librewolf/.librewolf/: librewolf.overrides.cfg
ncmpcpp/.ncmpcpp/: bindings  config
picom/.config/: picom.conf
rofi/: README.org
stumpwm/: README.org
termite/: README.org
x11/: .Xmodmap  .Xresources  .xinitrc  .xprofile  .xsettingsd  README.org
xmonad/.xmonad/: build  build-cabal  build-stack  cabal.project  stack.yaml  xmonad.cabal  xmonad.hs
zsh/: .zprofile  .zshenv  .zshrc  README.org
(+40 files in other folders)
